# deep-reinforcement-learning

./: 1.50  3  pyproject.toml
.jupyter/kernels/linux/: kernel.json
.jupyter/kernels/python3/: kernel.json
discretization/: Discretization.ipynb
monte-carlo/: Monte_Carlo.ipynb  Monte_Carlo_Solution.ipynb
p1_navigation/: Navigation.ipynb  checkpoint.pth  train.py
temporal-difference/: Temporal_Difference.ipynb  Temporal_Difference_Solution.ipynb
tile-coding/: Tile_Coding.ipynb  Tile_Coding_Solution.ipynb
