[tool.poetry]
name = "src"
version = "0.1.0"
description = "Deep Reinforcement Learning Nanodegree"
authors = ["Udacity"]

[tool.poetry.dependencies]
python = "~3.7"
scipy = ">=1.6.3"
numpy = ">=1.10.4"
pyglet = ">=1.4.0, <=1.5.15"
Pillow = "<=8.2.0"
cloudpickle = ">=1.2.0, <1.7.0"
atari-py = "~=0.2.0"
opencv-python = ">=3.*"
box2d-py = "~2.3.5"
imageio = "~2.9.0"
ipykernel = "^5.5.3"
gym = "^0.18.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["src/tests/"]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:Deprecated in *.*.*:DeprecationWarning",
]
