[tool.poetry]
name = "python"
version = "0.1.0"
description = "Deep Reinforcement Learning Nanodegree"
authors = ["Udacity"]

[tool.poetry.dependencies]
python = ">=3.6.2, <3.7.0"
numpy = "~1.19.1"
pyglet = ">=1.4.0,<=1.5.15"
Pillow = "<=8.2.0"
cloudpickle = "<1.7.0"
ipykernel = "^5.5.4"
gym = "^0.18.0"
atari-py = "^0.2.6"
opencv-python = "^4.5.2"
box2d-py = "^2.3.8"
imageio = "^2.9.0"
unityagents = "^0.4.0"
torch = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
